2009-06-11  Arek Korbik  <arkadini@gmail.com>

	* flumotion/twisted/pb.py (PingableAvatar.stopPingChecking):
	Release reference, stored in 'self', to what might be a closure
	over 'self' - breaks potential un-gc-able cycles, fixes #1311.

2009-06-11  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/admin/gtk/adminwindow.py(_setPlanetState):
	Update the components list if it has not been updated. It can be left
	un-updated if no component was present in the flow (only atmosphere
	componens).
	

2009-06-05  Josep Joan Ribas  <jribas@flumotion.com>

	* flumotion/component/misc/httpserver/Makefile.am:
	Added missing file (metadaprovider.py)

2009-06-05  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: Arek

	* flumotion/component/misc/httpserver/httpfile.py:
	* flumotion/component/misc/httpserver/httpserver.py:
	* flumotion/component/misc/httpserver/httpserver.xml:
	* flumotion/component/misc/httpserver/metadataprovider.py (added):
	Added MetadataProvider Plug for ondemand http-server component.
	Fixes #1302

2009-06-04  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/misc/porter/porter.py:
	Make the porter log the whole request line, not just the identifier,
	which for example does not include GET parameters.

2009-06-04  Alvin Delagon  <adelagon@flumotion.com>

	reviewed by: Zaheer Abbas Merali

	* flumotion/component/producers/playlist/Makefile.am:
	* flumotion/component/producers/playlist/playlist.py:
	* flumotion/component/producers/playlist/playlist.xml:
	* flumotion/component/producers/playlist/admin_gtk.py (added):
	* flumotion/component/producers/playlist/playlist.glade (added):
	Added admin UI for playlist-producer

2009-06-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	previous commit post-reviewed by: Jan Urbanski

	* flumotion/monitor/nagios/stream.py:
	Fix regexp to not require quick hack, courtesy perl-high Jan.
	Also remove log import, as it is not used by file.
